--- a/Coffee/Views/SellerView.axaml
+++ b/Coffee/Views/SellerView.axaml
@@ -4,10 +4,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:coffee="clr-namespace:Coffee"
         xmlns:viewModels="clr-namespace:Coffee.ViewModels"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="720" d:DesignHeight="1080"
         x:Class="Coffee.Views.SellerView"
         x:DataType="viewModels:SellerViewModel"
         x:Name="ThisWindow"
+        x:CompileBindings="True"
         WindowState="Maximized"
         WindowStartupLocation="CenterScreen"
         ExtendClientAreaToDecorationsHint="True"
@@ -93,8 +94,8 @@
                         HorizontalContentAlignment="Center"
                         CornerRadius="0, 0,25,25"
                         Padding="15" Margin="5,15,5, 5"
-                        Command="{Binding BuyButton}"
-                        CommandParameter="{Binding ElementName=ThisWindow}"/>
+                        Command="{ReflectionBinding BuyButton}"
+                        CommandParameter="{ReflectionBinding ElementName=ThisWindow}"/>
 
                 <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
