Added function to remove a dish from the cart

--- a/Coffee/Views/SellerView.axaml
+++ b/Coffee/Views/SellerView.axaml
@@ -194,7 +194,7 @@
                  Grid.Row="2" Grid.Column="1">
                 <ListBox.ItemsPanel>
                         <ItemsPanelTemplate>
-                                <WrapPanel MaxHeight="200" Orientation="Vertical"/>
+                                <WrapPanel MaxHeight="300" Orientation="Vertical"/>
                         </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
@@ -214,9 +214,17 @@
                                                    HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
                                                    FontSize="18"/>
+                                        <Button Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2"
+                                                VerticalAlignment="Center" HorizontalAlignment="Center"
+                                                Background="Transparent" CornerRadius="20" Margin="5"
+                                                Command="{Binding ElementName=ThisWindow, Path=DeleteDish}" 
+                                                CommandParameter="{Binding }">
+                                                <Image Height="15" Width="15" Margin="2" Source="/Assets/delete.png"/>
+                                        </Button>
                                         
                                         <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto"/>
+                                                <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
                                         </Grid.RowDefinitions>
                                         <Grid.ColumnDefinitions>
@@ -231,7 +239,7 @@
         <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition MaxHeight="200"/>
+                <RowDefinition Height="Auto" MinHeight="250"/>
         </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
