--- a/Coffee/Views/PromotionPageView.axaml
+++ b/Coffee/Views/PromotionPageView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="using:Coffee.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="1900" d:DesignHeight="720"
              x:Class="Coffee.Views.PromotionPageView"
              x:DataType="vm:PromotionPageViewModel"
              x:Name="ThisPage"
@@ -32,14 +32,16 @@
                                         Binding="{Binding FinishDate}"/>
                     <DataGridTextColumn IsReadOnly="True" Header="Активность"
                                         Binding="{Binding Activity}"/>
-                    <DataGridTemplateColumn Header="🗙">
+                    <DataGridTemplateColumn>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <Button HorizontalAlignment="Center" 
                                         Height="20" Width="20"
-                                        Background="DarkOrange"
+                                        Background="Transparent"
                                         Command="{Binding ElementName=ThisPage, Path=RemovePromotion}"
-                                        CommandParameter="{Binding }"/>
+                                        CommandParameter="{Binding }">
+                                    <Image Height="15" Width="15" Source="/Assets/delete.png"/>
+                                </Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
